# kaleidoscope

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  DOCKER.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  Dockerfile-airbase  README.md  docker-compose.yml  pyproject.toml  requirements.txt  signup_whitelist.txt.example
backend/migrations/: rubric_judges.sql
backend/scripts/: generate_secret.py
backend/src/: __init__.py  main.py
backend/src/common/: concurrency.py  config.py  secrets.py
backend/src/extensions/: README.md  __init__.py
backend/src/rubric/: __init__.py
backend/src/scoring/: __init__.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_answer_api.py  test_auth_dependencies.py  test_auth_routes.py  test_data_scoping.py  test_judge_api.py  test_metrics_api.py  test_persona_api.py  test_provider_api.py  test_question_api.py  test_rubric_api.py  test_snapshot_api.py  test_target_api.py  test_targets_probe.py  test_test_connection.py
backend/tests/unit/: test_aibots_connector.py  test_answer_generator.py  test_auth_utils.py  test_claim_processor.py  test_concurrency.py  test_connection.py  test_export_service.py  test_extensions_loader.py  test_http_auth.py  test_http_connector.py  test_judge_scoring.py  test_llm_client_provider_kwargs.py  test_llm_client_semaphore.py  test_main_lifespan.py  test_manual_migrations.py  test_metrics_service.py  test_persona_generator.py  test_persona_sampler.py  test_provider_service.py  test_registry.py  (+8 more)
(+273 files in other folders)
