[project]
name = "kaleidoscope-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # FastAPI and server
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    # Database
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    # Pydantic
    "pydantic==2.12.5",
    "pydantic-settings==2.6.1",
    # Auth
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    # LLM
    "litellm==1.83.8",
    "google-cloud-aiplatform>=1.38",
    # Templating
    "jinja2==3.1.6",
    # Observability
    "langfuse>=3.0.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    # Utilities
    "python-dotenv==1.0.1",
    "numpy==2.1.3",
    "scikit-learn==1.7.2",
    "pandas==2.2.3",
    "datasets>=3.0.0",
    "openpyxl==3.1.5",
    "PyYAML==6.0.2",
    # Document processing
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    # NLP
    "nltk==3.8.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
